first pass at fixing findbugs errors; filter others--mostly with plans to fix at later date